@@ -6,6 +6,7 @@
 - added: `TaskBuilder.done2([send_value])` returns `function` with wrapped `.done()`
 - added: `TaskBuilder.success2([send_value])` returns `function` with wrapped `.success()`
 - added: `TaskBuilder.next2(name)` returns `function` with wrapped `.next()`
+- added: new `RESTBuilder` aliases `.DELETE()`, `.PUT()`, `.POST()`, `.PATCH() and `.GET()`
 
 - updated: `F.worker2()` returns entire `stdout` buffer in the `callback(err, buffer)`
 - updated: `$options()` by adding `disabled` key
